2007-06-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	-_setupContext]): take the range of dates specified by the popup
	into account.

	* UI/Scheduler/UIxCalListingActions.[hm]: new subclass of
	WODirectAction that returns WOResponse objects with the events or
	todos satisfying the parameters passed in the url.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): take the new ivar
	"isAllDay" into account and compute the amount of days to pass to
	the iCalEvent.

2007-06-06  Francis Lachapelle <flachapelle@inverse.ca>

	* SoObjects/SOGo/NSNumber+Utilities.m: initial import.
	* SoObjects/SOGo/NSNull+Utilities.m: initial import.
	* UI/Scheduler/UIxCalTasksListView.m ([WOResponse -tasksListAction]): 
	new method that returns a json-formatted array of the visible tasks
	for the current user.

2007-06-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m: the owner of the
	object must be present in the list of UIDs we delete the object
	from. Otherwise Calendar objects having no organizer and no
	attendees will remain in their owner's Calendar.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-_urlPreferringParticle:expectedoverThisOne:possible]): remove the
	first 3 elements of the path array if the url returned by
	baseURLInContext: returns a hostname.

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-_adjustOwner]): sharedFolderName and otherUsersFolderName may be
	nil, in which case a crash happens when calling hasPrefix:.
	([SOGoMailFolder -_sharesACLs]): same as above.
	([SOGoMailFolder -otherUsersPathToFolder]): same as above. If
	otherUsersFolderName is nil, we return nil.
	([SOGoMailFolder -httpURLForAdvisoryToUser:uid]): if we receive
	nil from [self otherUsersPathToFolder], we return nil too.

2007-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject